corrected no host_id appointements visible for secretaries

--- a/client/src/styles/Staff/_cycles.scss
+++ b/client/src/styles/Staff/_cycles.scss
@@ -179,7 +179,7 @@
           top: 0;
           background: $blue;
           border-radius: 6px;
-          z-index: 1000;
+          // z-index: 1000;
         }
         th {
           min-width: 70px;
